[package]
name = "nowfile"
version = "0.2.0"
authors = ["Artemov Ivan (ZOXEXIVO) <zoxexivo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.2.0"
actix-rt = "1.1.1"
rust-s3 = {version = "0.26.3", features = ["no-verify-ssl"]}
object-pool = "0.5.3"
rand = "0.7.3"
chrono = "0.4.19"
actix-multipart = "0.3.0"
futures = "0.3.8"
serde = "1.0.117"
serde_json = "1.0.59"
base64 = "0.13.0"
slog = "2.5.2"
slog-async = "2.5.0"
slog-term = "2.6.0"
fnv = "1.0.7"
