[package]
name = "nowfile"
version = "0.2.0"
authors = ["Artemov Ivan (ZOXEXIVO) <zoxexivo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
rust-s3 = { version = "0.26.4", features = ["no-verify-ssl"] }
object-pool = "0.5.3"
rand = "0.8.1"
chrono = "0.4.19"
actix-multipart = "0.3.0"
futures = "0.3.9"
serde = "1.0.119"
serde_json = "1.0.61"
base64 = "0.13.0"
log = { version = "0.4.13", features = ["release_max_level_info"] }
env_logger = "0.8.2"
fnv = "1.0.7"
